Added CreatedResponse to return newly created IDs
toString() method for User.Authority
